Fix undo redo frame content updates. Autokey bug should be fully fixed now.

BUG:453682